# lft-flow-experiments

./: .flake8  .gitignore  README.rst
convnet-phi4/: .flake8  .gitignore  .pyrex_workspace.yaml  _experiments.yaml  noxfile.py  pyproject.toml
convnet-phi4/convnet_phi4/: config.py  flow.py  layers.py  model.py  plot.py  utils.py
convnet-phi4/convnet_phi4/scripts/: main.py
convnet-phi4/notebooks/: 01-conv2d_demo.ipynb  02-conv2d_density_transforms.ipynb  03-conv2d_trainable.ipynb  conv2d_demo.ipynb  demo.ipynb
convnet-phi4/templates/default/: cookiecutter.json
convnet-phi4/templates/default/{{cookiecutter.experiment_dir}}/: README.rst
convnet-phi4/testing/: jsonargparse_test.py
convnet-phi4/testing/lightning_cli/: README.rst  config_1.yaml  config_2.yaml  config_3.yaml  model.py
phi_four/: README.rst
